# TMS_food

./: .gitignore  pyproject.toml  tasks.txt
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py  0003_ingredient_calorie_ingredient_description_and_more.py
food/: settings.py  urls.py
templates/: base.html  home.html  menu.html  recipe-form.html  recipes-list.html  welcome.html
templates/ingredient/: create_ingredient.html  show_ingredients.html
templates/recipe/: category.html  recipe.html
templates/registration/: login.html  register-form.html  register.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
